package com.example.ex06.ex2;

public interface Runnable
{
    void run();
}
